--- a/src/components/controls/controls.css
+++ b/src/components/controls/controls.css
@@ -19,13 +19,14 @@
   width: 100%;
   height: auto;
   background: rgb(24, 24, 24);
+  padding: 2px;
   display: flex;
   justify-content: space-between;
   /* border: 1px solid rgb(43, 43, 43); */
 }
 .arrow {
-  border: 2px solid rgb(48, 48, 48);
-
+  border: 2px solid rgb(24, 24, 24);
+  background-color: rgb(48, 48, 48);
   padding: 15px 0;
   width: 100%;
   height: 100%;
