--- a/src/components/controls/controls.css
+++ b/src/components/controls/controls.css
@@ -6,6 +6,13 @@
   min-width: 300px;
   margin-right: 25px;
 }
+@media (max-width: 825px) {
+  #controls {
+    width: 100%;
+    min-width: 300px;
+    margin-right: 0px;
+  }
+}
 
 #console {
   padding: 15px;
