--- a/src/components/controls/controls.css
+++ b/src/components/controls/controls.css
@@ -19,8 +19,9 @@
   width: 100%;
   height: 200px;
   background: rgb(24, 24, 24);
-
-  /* border: 3px solid rgb(18, 18, 18); */
+  border-radius: 5px 5px 0 0;
+  border: 2px solid rgb(92, 92, 92);
+  border-bottom: none;
 }
 #inputs {
   width: 100%;
@@ -29,11 +30,13 @@
   padding: 2px;
   display: flex;
   justify-content: space-between;
-  /* border: 1px solid rgb(43, 43, 43); */
+  border: 2px solid rgb(92, 92, 92);
+  border-top: none;
+  border-radius: 0 0 5px 5px;
 }
 .arrow {
   border: 2px solid rgb(24, 24, 24);
-  background-color: rgb(48, 48, 48);
+  background-color: rgb(126, 126, 126);
   padding: 15px 0;
   width: 100%;
   height: 100%;
@@ -42,7 +45,7 @@
   align-items: center;
 }
 .arrow:hover {
-  background: rgba(255, 255, 0, 0.454);
+  background: rgba(255, 255, 0, 0.687);
 }
 
 #start-btn {
@@ -52,5 +55,29 @@
   color: white;
   font-size: 18px;
   letter-spacing: 3px;
+  border-radius: 5px;
   border: none;
+  cursor: pointer;
+}
+#clear-btn {
+  height: 35px;
+  margin-top: 15px;
+  text-align: center;
+  background-color: none;
+  color: white;
+  font-size: 18px;
+  letter-spacing: 3px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#clear-btn:hover {
+  background-color: rgba(128, 128, 128, 0.192);
+}
+
+#start-btn:hover {
+  background-color: rgba(34, 133, 70, 0.751);
 }
