--- a/src/components/controls/controls.css
+++ b/src/components/controls/controls.css
@@ -18,10 +18,13 @@
   padding: 15px;
   width: 100%;
   height: 200px;
-  background: rgb(24, 24, 24);
+  background: rgb(41, 41, 41);
   border-radius: 5px 5px 0 0;
-  border: 2px solid rgb(92, 92, 92);
+  border: 1px solid rgb(92, 92, 92);
   border-bottom: none;
+  -webkit-box-shadow: inset 0px 0px 9px 3px rgba(0, 0, 0, 0.535);
+  -moz-box-shadow: inset 0px 0px 9px 3px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 0px 0px 9px 3px rgba(0, 0, 0, 0.35);
 }
 #inputs {
   width: 100%;
@@ -30,7 +33,7 @@
   padding: 2px;
   display: flex;
   justify-content: space-between;
-  border: 2px solid rgb(92, 92, 92);
+  border: 1px solid rgb(92, 92, 92);
   border-top: none;
   border-radius: 0 0 5px 5px;
 }
@@ -43,9 +46,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 5px;
 }
 .arrow:hover {
-  background: rgba(255, 255, 0, 0.687);
+  background: rgb(240, 208, 0);
 }
 
 #start-btn {
