--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@ body {
   padding: 0 50px;
   background-color: #181818;
 }
+.app {
+  position: relative;
+}
 
 main {
   margin: 0 auto;
@@ -25,8 +28,19 @@ h1 {
 p {
   font-size: 18px;
   color: #a9a9a9;
-  margin-top: 10px;
+  margin: 10px 0;
   line-height: 26px;
+}
+
+#backdrop {
+  position: absolute;
+
+  z-index: 50;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #121212d6;
 }
 
 @media (max-width: 825px) {
