--- a/src/components/modals/modal.css
+++ b/src/components/modals/modal.css
@@ -1,10 +1,12 @@
 #modal-area {
+  position: relative;
+
   height: 200px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-
+  transition: all 300ms ease-in-out;
   margin: 0 auto;
   margin-top: 25px;
   max-width: 900px;
@@ -18,6 +20,8 @@
   width: 100%;
   height: 100%;
   display: flex;
+  position: relative;
+  z-index: 51;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
@@ -25,11 +29,11 @@
 
 #success h1 {
   color: rgba(34, 133, 70, 0.751);
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
 }
 #fail h1 {
   color: rgb(154, 22, 22);
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
 }
 
 .modal button {
@@ -66,6 +70,7 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-start;
-
+  position: relative;
+  z-index: 51;
   color: #a9a9a9;
 }
